css/style.css
/* CSS architecture: BEM methodology - Block, Element, Modifier

	.block represents the higher level of an abstraction or component
	.block__element represents a descendent of .block that helps form .block as a whole
	.block--modifier represents a different state or version of .block

 */
html {
	min-height: 100%;/* make sure it is at least as tall as the viewport */
    position: relative;
	/* background image to cover entire browser window at all times */
	background: url('https://68.media.tumblr.com/d0914fab2603665235669293d3b61c37/tumblr_os8sx9UAHb1slhhf0o1_1280.jpg') no-repeat center center fixed; 
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

body {
	height: 100%; /* force the body element to match the height of the HTML element */
	font-family: Roboto;
	color: white;
}

.sidebar {
	position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    overflow: scroll;
    background-color: rgba(17,65,98,0.6);
	width: 30%;
	padding: 30px 20px;
	text-align: center;
}

/* Greet user */
.greet__name {
	font-size: 1.5rem;
}

.greet__input {
	display: block;
	font-size: 1.5rem;
	border: none;
	margin: 10px auto 0 auto;
	border-radius: 5px;
	background-color: #EDF1F3;
	transition: background-color .3s ease-in-out;
}

.greet__input:focus {
	background-color: #EDF1F3;
	border: 2px solid #B62929;
	outline: none;
}


/* Clock styles */
.clock {
	margin-top: 8%;
 	margin-bottom: 8%;
}

.clock__hour, .clock__minute, .clock__second {
	opacity: 1;
	display: inline;
	background: none;
	margin: 0 auto;
}

.clock__hour, .clock__minute {
  font-size: 4rem;
  font-weight: 700;
}

.clock__second {
  font-size: 2.5rem;
}


/* Weather styles */
.weather {
  margin-top: 8%;
  margin-bottom: 8%;
}

.weather__loc {
	font-size: 1.25rem;
}

.weather__temp {
	font-size: 1.5rem;
	display: inline-block;
	margin: 0 10px;
}

.weather__convert {
	font-size: 0.75rem;
	display: inline-block;
	margin: 0 10px;
}

.weather__descr {
	font-size: 0.875rem;
}

/* Motivation button */
.article {
	margin-top: 8%;
	margin-bottom: 8%;
}

.article__link:link {
	color: #E7ECEF;
    text-decoration: none;
    border-bottom: .08rem solid rgba(231,236,239,.2);
}

.article__link:hover {
    text-decoration: none;
    border-bottom: .08rem solid #BEC2C4;
    text-shadow: 0 0 1px #BEC2C4;
}

.article__link:visited {
	color: #BEC2C4;
	text-decoration: none;
}

.article__display {
	padding: 10px 30px;
}

.article__button {
   background: #922121;
   background: -webkit-gradient(linear, left top, left bottom, from(#B62929), to(#922121));
   background: -webkit-linear-gradient(top, #B62929, #922121);
   background: -moz-linear-gradient(top, #B62929, #922121);
   background: -ms-linear-gradient(top, #B62929, #922121);
   background: -o-linear-gradient(top, #B62929, #922121);
   padding: 5px 15px;
   border-radius: 5px;
   color: white;
   text-shadow: rgba(0,0,0,.2) 0 1px 0;
   text-decoration: none;
}

.article__button:hover {
   border-top-color: #922121;
   background: #922121;
   color: #ccc;
   }
.article__button:active {
   background: #922121;
   }


/* Todo styles */
.todos {
	font-family: Roboto;
	text-align: left;
	/** TO FIX: the 3 lines below fix the todos to the bottom, but not working great **/
	position: absolute;
    bottom: 5%;
    width: 90%
    
}

.todos__title {
	background-color: #4c0001;
	color: white;
	margin: 0;
	padding: 10px 10px;
	font-size: 0.875rem;
}

/**TO FIX**/
.todos .fa-plus {
	float: right;
}

.todos__input {
	font-size: 0.75rem;
	background-color: #E7ECEF;
	color: #070000;
	width: 100%; /*100% width includes only the content, not the padding or margin, so we'll use box-sizing below*/
	padding: 5px 5px 5px 16px;
	box-sizing: border-box;
	border: 2px solid rgba(0,0,0,0);/*an invisile border that will hide a small gap between input and ul that takes up same space as the border when focused*/
}

.todos__input:focus {
	background: #EDF1F3;
	border: 2px solid #B62929;
	outline: none;/*take off default highlight (when focussing on input box)*/
}

.todos__ulist {
	list-style: none;
	margin: 0;
	padding: 0;
}

.todos__list-item {
	background-color: #EDF1F3;
	height: 30px;
	line-height: 30px;
	color: #272932;
	font-size: 0.75rem;
}

.todos__list-item:nth-child(2n) {
	background-color: #E7ECEF;
}

/**TO FIX**/
.todos span {
	background-color: #B62929;
	color: white;
	margin-right: 20px;
	text-align: center;
	width: 0;
	display: inline-block;
	opacity: 0;/*hide trash icon (still slightly visible when we don't hover over li)*/
}

/**TO FIX**/
.todos__list-item:hover span {/*hover over li (since now span is width: 0px)*/
	width: 30px;
	transition: 0.2s linear;
	opacity: 1.0;/*show icon only when hovering*/
}

.todos__list-item--completed {
	color: gray;
	text-decoration: line-through;
}


/* Quotes */
.quote {
    position: absolute;
    bottom: 5%;
    left: 3%;
    right: 40%
}

.quote__author {
	text-align: right;
}

